--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="grid">
         <div class="container "id="message">
             <p id="code_sms">Morse Code</p>
-            <button  onclick='copy_code_sms_from_clipboard()'>copy</button>
+            <button  id="copy_btn" onclick='copy_code_sms_from_clipboard()'>copy</button>
         </div>
         <div class="container " id="translation">
             <p id="translated_sms">Translated Message</p>
